cpp/cwiczenie1/error_log.txt
main.cpp: In function ‘int main()’:
main.cpp:13:10: error: ‘i’ cannot be used as a function
   13 |         i(x%i==0){
      |         ~^~~~~~~~
main.cpp:20:2: error: expected ‘}’ at end of input
   20 | }
      |  ^
main.cpp:5:11: note: to match this ‘{’
    5 | int main(){
      |           ^
